Fix all my blog posts to use next/image

--- a/next/content/blog/hackathons-all-the-time.mdx
+++ b/next/content/blog/hackathons-all-the-time.mdx
@@ -25,7 +25,7 @@ you look around at the people around you: The smartest of the smart working on
 groundbreaking, amazing stuff that you could only dream to make. And they are
 doing it with such ease.
 
-<figure class="pull-right">
+<figure className="pull-right">
   ![Nerf Gun Turret](/img/hackathons/nerf-gun-turret.png)
   <figcaption>They fired this bad boy at judges. It was a sight to behold.</figcaption>
 </figure>
@@ -98,7 +98,7 @@ If anything I've described here makes you want to go to one of these fantastic
 events, go to one. I'll probably be attending [Hack PSU](http://www.hackpsu.com/)
 in a few weeks. Hopefully, I'll see you there.
 
-<figure class="center">
+<figure className="center">
     ![HacKSU at Penn Apps 2014](/img/hackathons/hacksu_at_penn_apps.jpg)
     <figcaption>HacKSU at Penn Apps 2014</figcaption>
 </figure>
