--- a/next/content/blog/what-i-learned-at-talent-inc.mdx
+++ b/next/content/blog/what-i-learned-at-talent-inc.mdx
@@ -46,7 +46,7 @@ Here are some cool tech patterns I learned around this:
 It goes without saying, but I will say it because it's important: **I am going to miss working with these people so
 much. I will never forget your kindness and understanding.**
 
-<iframe src="https://giphy.com/embed/ALQnCUBuggPxS" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mvp-ALQnCUBuggPxS">via GIPHY</a></p>
+<iframe src="https://giphy.com/embed/ALQnCUBuggPxS" width="480" height="270" frameBorder="0" className="giphy-embed center" allowFullScreen></iframe>
 
 ## So Many Data Pipelines
 
@@ -117,6 +117,6 @@ so hard I burnout once a year". I should probably work on that… I'm going to t
 habits and doing a thorough job search next year.
 
 <figure>
-  <img src="/img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg" alt="Me & a coworker in a marketing photo looking at an empty notebook" />
+  ![Me & a coworker in a marketing photo looking at an empty notebook](/img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg)
   <figcaption>You never know when you're going to show up on the marketing website…</figcaption>
 </figure>
