--- a/next/content/talks/redux.mdx
+++ b/next/content/talks/redux.mdx
@@ -205,7 +205,9 @@ const sendTweet = useCallback((tweet) => dispatch({ type: 'SEND_TWEET', tweet })
 	- But now you have to persist and update these widgets
 	- Do you think you can do this better than Redux? Furthermore, do you think you can cultivate an ecosystem of ready made middlewares that make you more efficient/reliable?
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">local state, yes. but global, no. if you centralize it, it will either turn into a salad or tank performance b/c everything re-renders on every state change. i am seeing people do this recently as some kind of work around, which is pretty sad: <a href="https://t.co/ouhjisVsQ4">https://t.co/ouhjisVsQ4</a></p>&mdash; ☄︎ (@0xca0a) <a href="https://twitter.com/0xca0a/status/1192420546912432128?ref_src=twsrc%5Etfw">November 7, 2019</a></blockquote>
+<Tweet id="1192420546912432128">
+	<blockquote><p lang="en" dir="ltr">local state, yes. but global, no. if you centralize it, it will either turn into a salad or tank performance b/c everything re-renders on every state change. i am seeing people do this recently as some kind of work around, which is pretty sad: <a href="https://t.co/ouhjisVsQ4">https://t.co/ouhjisVsQ4</a></p>&mdash; ☄︎ (@0xca0a) <a href="https://twitter.com/0xca0a/status/1192420546912432128?ref_src=twsrc%5Etfw">November 7, 2019</a></blockquote>
+</Tweet>
 
 - Another thing I am skeptical about with hooks is tracing and debugging
 	- Let's remember that hooks are just unnamed items in a global array
