--- a/next/content/blog/funny-money.mdx
+++ b/next/content/blog/funny-money.mdx
@@ -57,7 +57,7 @@ ask why?
 >
 > Him: Yes, but that isn't a good first pass at collecting. Gotta work up to that.
 
-<iframe src="https://giphy.com/embed/xfQk67w5fRRx6" width="480" height="360" frameBorder="0" className="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/humor-shocked-surprised-xfQk67w5fRRx6">via GIPHY</a></p>
+<iframe src="https://giphy.com/embed/xfQk67w5fRRx6" width="480" height="360" frameBorder="0" className="giphy-embed" allowFullScreen></iframe>
 
 As I went to leave, he hits me with $100 and a wink. You know now that this is now dead ass serious, but like all things
 when I was young, I didn't learn. **But hey, that's $100 I didn't have before, again, no issues here.**
