Add excerpt field and update blog listing page to have post previews

--- a/next/content/blog/job-search-2k22.mdx
+++ b/next/content/blog/job-search-2k22.mdx
@@ -8,7 +8,7 @@ tags:
   - code
 ---
 
-At the end of 2021, [I left my job at Talent Inc.][goodbye-talentinc] and conducted an extremely thorough job search.
+At the end of 2021, [I left my job at Talent Inc.](/blog/what-i-learned-working-at-my-first-startup) and conducted an extremely thorough job search.
 I really prefer to job search without a day job so that I can give it my full focus. Today, I am happy to announce that
 after a little over a month of interviewing, I found the perfect job for me. But, before I get to that, I really want to
 talk about how I conducted my job search as it's been something I've been planning for a bit.
@@ -31,6 +31,8 @@ Let's take a quick at conversion rates compared to 2017:
 The numbers don't tell the full story here either! The later stage numbers here are weighed down by the fact that I was
 able to drop out of processes later on if I wasn't getting good vibes from the company. That freedom alone allowed me to
 have a little more swagger in walking into interviews.
+
+<!-- excerpt -->
 
 # "Technology Enabled Job Search"
 
@@ -109,5 +111,3 @@ the feature work that needs to be done at a startup!
 In closing, this has been a hectic job search and I'm so happy to finally be done with it. Now, I am going to take two
 weeks off to be a human being. I'm probably going to go upstate for a long weekend. Definitely going to play some
 tennis. Maybe I'll get lost in Central Park a few times or get another dumb tattoo.
-
-[goodbye-talentinc]: /blog/what-i-learned-working-at-my-first-startup
