Add excerpt breakpoints to all blog posts

--- a/next/content/blog/2021-website-redesign.mdx
+++ b/next/content/blog/2021-website-redesign.mdx
@@ -11,7 +11,7 @@ tags:
 ![Home page screenshot](/img/website-update/home-page.png)
 
 In the age of social media and hosted blogs, personal websites don't get the love they deserve. Sure, writing developer
-based content on a site like [medium.com][medium] or [dev.to][dev.to] will get more eyeballs on it than something you
+based content on a site like [medium.com](https://medium.com/) or [dev.to](https://dev.to/) will get more eyeballs on it than something you
 make on your own, but there is something extremely satisfying in owning every pixel on a site with your name on it.
 I saw this Tweet the other day and it seemed fitting to how I think about personal sites.
 
@@ -23,6 +23,8 @@ If we are entering the era of Web3 (which is Soylent in this Tweet, ewww) and it
 techno-optimisim and ownership of the Web 1.0 era, what better way to embody this than with an over-engineered personal
 site? Also, I just really love Greek salad (I live in Astoria after all, you walk outside on Ditmars and they force
 Greek salad on you).
+
+<!-- excerpt -->
 
 > As an aside, I find all of Web3 and blockchain stuff disgusting. I have no money in any of that stuff because I object
 > on environmental issues and that most of it reeks of pump and dump schemes. That said, I am happy for anything that
@@ -194,7 +196,7 @@ Well, I elevated it in 2 ways:
 2. I'm overlaying the artist name, album and the number of scrobbles with an image map
 
 Number 2 is the thing I want to brag about. I used [gatsby-source-lastfm][gatsby-source-lastfm] to pull my last 1000
-scrobbles and then I whipped up a React component to overlay the info onto the image using an [HTML image map][html-image-map] 
+scrobbles and then I whipped up a React component to overlay the info onto the image using an [HTML image map][html-image-map]
 (in the year 2021, it's not often you get the chance to use an image map legitimately, so I was tickled pink to do so).
 
 The only downside to this approach is that it's not 100% accurate. I've noticed the following things:
@@ -219,7 +221,7 @@ Going into this redesign, I was convinced that I was going to spend money on a t
 to pay a premium for a good template. But, I couldn't find a paid one that was simple enough for all my pages or really
 felt like "me".
 
-That said, I did find a free [minimal blog theme][minimal-blog-theme] from [Tailwind Toolbox][tailwind-toolbox] by 
+That said, I did find a free [minimal blog theme][minimal-blog-theme] from [Tailwind Toolbox][tailwind-toolbox] by
 [Amrit Nagi][amrit-nagi] that I fell in love with and adapted to have the best elements from my previous site shown off
 in the best possible light. Thanks Amrit, I made sure to buy you some coffees.
 
@@ -377,5 +379,3 @@ gazing! In any case, I hope you like this site and thank you for reading this no
 [gatsby-source-lastfm]: https://www.gatsbyjs.com/plugins/gatsby-source-lastfm/
 [html-image-map]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/map
 [songkick]: https://www.songkick.com/
-[medium]: https://medium.com/
-[dev.to]: https://dev.to/
