--- a/next/content/blog/adhd.mdx
+++ b/next/content/blog/adhd.mdx
@@ -13,7 +13,7 @@ tags:
 # 1. The Beginning
 
 I was 6 years old, in first grade. My teacher told my mom that I couldn't sit still and was disruptive. My mom is
-a special educator and takes me to the doctor at which point I am diagnosed with  <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr> 
+a special educator and takes me to the doctor at which point I am diagnosed with  <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr>
 and put on Ritalin.
 
 > ADHD stands for attention deficit hyperactivity disorder. It is a medical condition. A person with ADHD has
@@ -44,6 +44,8 @@ around 3.0. I get a computer when I'm 15 and it's off to the races. I could sit 
 information. Tech blogs, gaming sites, and the old StumbleUpon extension opened my mind to so many possibilities in the
 world. I end up going to a vocational school to learn how to do video editing / graphic design / web design and fall in
 love with making websites.
+
+<!-- excerpt -->
 
 # 2. Early Adulthood
 
@@ -102,7 +104,7 @@ a gown all weekend and shared a room with a friendly guy that had a drinking pro
 drunk. They put me on a nicotine patch because I wasn't allowed to smoke. You're not supposed to sleep with those on
 but I did anyways and had the most vivid and trippiest dreams ever (I fought a giant crab and there were health bars at
 the top of my vision and I would randomly get iOS notifications over the health bars during the fight. This is how
-augmented reality glasses should be designed). 
+augmented reality glasses should be designed).
 
 Most importantly, during this weekend in the hospital, we adjusted my anti-depressants from Celexa to **Wellbutrion**
 and **Remeron**. We will get to the Wellbutrion in later, but the Remeron ended up being the biggest improvement in my
