--- a/next/content/blog/cooking-cherry-slab-pie-shrimp-polenta.mdx
+++ b/next/content/blog/cooking-cherry-slab-pie-shrimp-polenta.mdx
@@ -21,6 +21,8 @@ The highlight of my weekend wasn't the game, though. At some point last week, a 
 Twitter feed that **I had to make**. I cleared my schedule on Sunday and vowed to spend the day cooking. The results
 speak for themselves, so let's dive in.
 
+<!-- excerpt -->
+
 # [Cherry Slab Pie][cherry-slab-pie]
 
 This recipe from the [Smitten Kitchen][smitten-kitchen] is what stopped me in my tracks. Now usually, I'm not a baker
@@ -74,7 +76,7 @@ saying that it's ugly as sin but I still love it. I set it aside to cool and we'
 
 ![Lemon glaze](/img/cooking-cherry-slab-pie/lemon-glaze.jpeg)
 
-Now it's time to make glaze for our giant Toaster Strudel! The recipe had three different preparation for the glaze: 
+Now it's time to make glaze for our giant Toaster Strudel! The recipe had three different preparation for the glaze:
 
 > 1 cup confectioners’ sugar
 >
@@ -132,7 +134,7 @@ are, I love them.
 [hot-sauce-shrimp]: https://cooking.nytimes.com/recipes/1022328-hot-sauce-shrimp
 [cheesy-polenta]: https://www.rachaelrayshow.com/recipes/rachaels-quick-cooking-cheesy-polenta
 [smitten-kitchen]: https://smittenkitchen.com
-[pie-dough]: https://smittenkitchen.com/2008/11/pie-crust-102-all-butter-really-flaky-pie-dough/  
+[pie-dough]: https://smittenkitchen.com/2008/11/pie-crust-102-all-butter-really-flaky-pie-dough/
 [pastry-blender]: http://www.amazon.com/gp/product/B000QJE48O?ie=UTF8&tag=smitten-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=B000QJE48O
 [what-had-happened-was]: https://starburns.audio/podcasts/what-had-happened-was/
 [crystal]: https://crystalhotsauce.com/
