--- a/next/content/blog/cooking-strawberry-pie-spiked-soup.mdx
+++ b/next/content/blog/cooking-strawberry-pie-spiked-soup.mdx
@@ -16,7 +16,7 @@ hop on this trend and write about my cooking.
 Sunday was extremely hot for the first weekend in June. My partner has yoga in the early afternoon so I had time to plan
 and execute some non-dinner meals. Let's make some desert and a cocktail that complements the heat of the day!
 
-# [Strawberry Pretzel Pie][strawberry-pretzel-pie]
+# [Strawberry Pretzel Pie](https://cooking.nytimes.com/recipes/1020323-strawberry-pretzel-pie)
 
 I made this pie last year and it's the perfect summer pie. First I blended up a bunch of pretzels to make the crust.
 Then I combined the pretzel with some half melted butter and sugar and lay it out in my cast iron pie pan. They say to
@@ -24,10 +24,12 @@ use a stand mixer, but all I have are my 🙌  so they had to do. Bake it and le
 
 ![Making the crust in 3 steps](/img/cooking-strawberry-pie-cucumber-soup/making-the-crust.jpg)
 
+<!-- excerpt -->
+
 It's time to make [cream](https://www.youtube.com/watch?v=PBwAxmrE194)! The recipe calls for a cup of confectioners
 sugar, but I used all that up making the crust, so I used granulated. This ended up working fine because it dissolves.
 I also used whipped cream cheese instead of plain which made it extra fluffy. Pull that crust out of fridge and pour the
-cream in and put it back in the fridge. 
+cream in and put it back in the fridge.
 
 ![Cream in the crust](/img/cooking-strawberry-pie-cucumber-soup/cream-in-crust.jpeg)
 
@@ -77,6 +79,6 @@ recipe called for more cucumbers than we used. Either way, it was a little too s
 least, my partner is a lightweight 😂 ). I dunno if I would make it again.
 
 [strawberry-pretzel-pie]: https://cooking.nytimes.com/recipes/1020323-strawberry-pretzel-pie
-[cucumber-soup]: https://cooking.nytimes.com/recipes/1014750-spiked-cucumber-soup 
+[cucumber-soup]: https://cooking.nytimes.com/recipes/1014750-spiked-cucumber-soup
 [bmd]: https://berkshiremountaindistillers.com/
 [the-young-jerks]: https://youngjerks.com/
