--- a/next/content/blog/cooking-veggie-burgers.mdx
+++ b/next/content/blog/cooking-veggie-burgers.mdx
@@ -26,11 +26,13 @@ good at this game!).
 But on Sunday, I needed to kick some ass cooking to feel whole. I cannot be lazy all weekend and feel good about myself.
 So I quickly tossed together a menu and got cooking.
 
+<!-- excerpt -->
+
 # Veggie Burgers with Bacon Jam
 
 It's the summer and all the cool kids are grilling burgers. But not us, our apartment has no outdoor space for a grill
 so we have to settle for the same kitchen we use for every meal. We're not complaining though, it's all about how you
-use it. Today, I want to introduce you to my favorite burger that you can only make in a pan, the 
+use it. Today, I want to introduce you to my favorite burger that you can only make in a pan, the
 [Café Salle Pleyel Burger][burger-recipe].
 
 ![Veggie burger ingredients](/img/cooking-veggie-burgers-and-more/veggie-burger-ingredients.jpg)
@@ -66,7 +68,7 @@ Bacon jam is pretty simple to make. Fry up some sliced bacon, remove once it get
 caramelize them in the bacon grease. Then you dump some cooking sherry in there to deglaze the pot and add some
 sweetness. And finally, you add some balsamic vinegar, brown sugar, and maple syrup before re-adding the bacon and
 simmering on low for about 10 minutes. I eyeballed and tasted my way to figure out if I had the right proportions, which
-was a fun improvisation. 
+was a fun improvisation.
 
 ![Finished veggie burgers with sweet potato fries and salad](/img/cooking-veggie-burgers-and-more/finished-burgers.jpeg)
 
