--- a/next/content/blog/feelings-api.mdx
+++ b/next/content/blog/feelings-api.mdx
@@ -16,6 +16,8 @@ A few months ago, my therapist challenged me to begin journaling my daily life i
 feelings and to draw connections of my behaviors and mental health. Rather than use a paper journal, they recommended an
 app called [Daylio](https://daylio.webflow.io). I installed the app and went about living my life.
 
+<!-- excerpt -->
+
 ## Daylio
 
 The app’s flow is pretty simple. At 10pm each day, I get a push notification to enter a journal entry. I’m asked to rate
@@ -61,4 +63,4 @@ guards into the API:
 - I built a feature into the notes to hide notes with a `#private` hashtag in them.
 
 Let’s see how long I can keep this journaling up. Now that it serves a purpose I think is cool, I think it’ll have
-a little more staying power in my life. 
+a little more staying power in my life.
