--- a/next/content/blog/funny-money.mdx
+++ b/next/content/blog/funny-money.mdx
@@ -15,7 +15,7 @@ education had rapidly shrank. In order to have a car on the road and go to schoo
 So, I got a job selling things at RadioShack and that was fine for a while. I was able to balance school and sell cell
 phones no problem. But that job went away cause I was giving too many discounts. Gotta make those sales! _Technically_,
 they expected me to pay them $500 in order to prevent criminal charges being pressed, but I never paid that and [I don't
-think they're gonna press me on that anymore][rs-bankruptcy].
+think they're gonna press me on that anymore](https://www.npr.org/sections/thetwo-way/2017/03/09/519440212/radioshack-files-for-bankruptcy-again).
 
 In any case, I needed a job fast and I really wanted something in <abbr title="Information Technology">IT</abbr>. So
 I hoped on Craigslist and answered a job ad for a traveling IT technician. The interview was at a Panera and it went
@@ -38,6 +38,8 @@ The day to day was always drama filled and exciting. You drive to Sandusky to re
 Heights to setup a new cafe. You learn to make patch cables, you learn more about networking and scripting. You get in
 arguments about how much gas money you should be reimbursed for driving to all those sites. Lots of 16 hour days cause
 it has to get done _now now now_. Typical 2 bit IT shit.
+
+<!-- excerpt -->
 
 What's a little different from a typical IT job is... the customers paying your bills are unsavory. And _their_
 customers are all poor people trying to turn a dollar into $10 knowing full well that the deck is stacked against them.
@@ -64,7 +66,7 @@ when I was young, I didn't learn. **But hey, that's $100 I didn't have before, a
 
 Well, a few weeks later, the IT job goes sideways. We weren't making enough money, my boss institutes that the day will
 start at 6am and end when the job is done. And now we can't pay for all the gas that you need to drive to and from
-sites. Me pushing for that got me fired. It was all good, I quickly found more work doing web sites for a <abbr title="Multi Level Marketing">MLM</abbr> 
+sites. Me pushing for that got me fired. It was all good, I quickly found more work doing web sites for a <abbr title="Multi Level Marketing">MLM</abbr>
 scheme, but that's a story for another time, just to show that I was very dumb back then.
 
 Fast forward 6 months. I'm working an internship at a respectable local publication and I get a call from an unknown
@@ -140,7 +142,7 @@ merchants seem like steal. And this is not to even mention the ecological impact
 (As an aside, I've always been confused about when a crypto person brings up the gold mining industry having at least
 the same impact as crypto on the environment, we just can't measure it. Literally no countries are still on the gold
 standard, so that is irrelevant. Also, being able to print and remove money from the economy is an amazing feature, not
-a bug. [Look into all the recessions in the 1800s around mining too much or too little gold in a given year][gold-recessions]. 
+a bug. [Look into all the recessions in the 1800s around mining too much or too little gold in a given year][gold-recessions].
 If you want me to agree that all mining is bad, I mean yes, it's exploitative and a form of colonialism, but at least is
 serves a purpose that the general public can benefit from.)
 
@@ -151,14 +153,14 @@ money, they are allowed to gamble as they see fit, right?
 
 **The other superpower crypto has is being perfect for criminals.** Let's play the hits!
 
-* Crypto is perfect for collecting payment in ransomware attacks against [hospitals][hospital-ransomware] and 
+* Crypto is perfect for collecting payment in ransomware attacks against [hospitals][hospital-ransomware] and
   [municipal governments][baltimore-ransomware]. [You can track the rise of these attacks against the prevalence of crypto][npr-ransomware].
 * <abbr title="Non Fungible Tokens">NFTs</abbr> replicate the worst elements of the art world being a tax haven EXCEPT
   it's far easier to commit fraud. You mint an NFT for $1k, sell it to yourself for $2k using another wallet, flip it to
   yourself a couple of more times til you can sell it to a mark for $8k, clearing $7k. It should also be noted that NFTs
   are ugly as shit and a capitalist's vision of what art is.
-* Rug pulling/pumping and dumping is a concept that all crypto bros have accepted as a part of life. 
-  You launch a coin or NFT or <abbr title="Decentralized Autonomous Organization">DAO</abbr>, raise a bunch of funds by 
+* Rug pulling/pumping and dumping is a concept that all crypto bros have accepted as a part of life.
+  You launch a coin or NFT or <abbr title="Decentralized Autonomous Organization">DAO</abbr>, raise a bunch of funds by
   getting influencers post about it on their story and then take off with the money and disappear.
 
 I could go on and on about all the fraud here, but [Web3 is going just great](https://web3isgoinggreat.com/) does a far
@@ -181,7 +183,6 @@ to tell, but at least I could sleep easy knowing that I did the right thing. I w
 make a life changing amounts of money in a lot of places, but hey, they can do them because they have to live with
 themselves.
 
-[rs-bankruptcy]: https://www.npr.org/sections/thetwo-way/2017/03/09/519440212/radioshack-files-for-bankruptcy-again
 [gold-recessions]: https://www.moneyandbanking.com/commentary/2016/12/14/why-a-gold-standard-is-a-very-bad-idea
 [bloomberg-tether]: https://www.bloomberg.com/news/features/2021-10-07/crypto-mystery-where-s-the-69-billion-backing-the-stablecoin-tether
 [npr-ransomware]: https://www.npr.org/2021/06/10/1004874311/how-bitcoin-has-fueled-ransomware-attacks
