--- a/next/content/blog/hackathons-all-the-time.mdx
+++ b/next/content/blog/hackathons-all-the-time.mdx
@@ -44,6 +44,8 @@ to all hacks. Sit down with your teammates, plan out what you want to make, look
 for libraries that will make development easier, divide tasks to members and go
 with that. The hackathon is a puzzle: Show up with all the pieces.
 
+<!-- excerpt -->
+
 ## Do What You Love
 
 I hate business planning "hackathons" (I'm looking at you, [Startup
