--- a/next/content/blog/icymi-just-married.mdx
+++ b/next/content/blog/icymi-just-married.mdx
@@ -8,9 +8,9 @@ tags:
   - icymi
 ---
 
-<StreamingAlbum 
-  name="Just Married" 
-  artist="Glocca Morra" 
+<StreamingAlbum
+  name="Just Married"
+  artist="Glocca Morra"
   bandcampID="3914936245"
   url="https://gloccamorradied.bandcamp.com/album/just-married-2"
   className="float-right"
@@ -35,6 +35,8 @@ general chaos.
 Let's start with a practical example: **Glocca Morra's _Just Married_** from 2012. You got jangly guitars doing math
 rock riffs. You got a lead singer screaming about the first year of marriage and being a fuck up. And you have a drummer
 just doing his thing. These are all things that I love.
+
+<!-- excerpt -->
 
 > Here's your anniversary <br />
 > Ten years down the drain
@@ -64,7 +66,7 @@ emotional bluntness as an avenue to prey upon teenagers, fuck Brand New, Jank an
 > I remember going broke at the bar <br />
 > I remember doing drugs in my car <br />
 > Please don't hold my hand, I need to get up <br />
-> 
+>
 > Derrida, I don't know what I'm doing <br />
 > Derrida, I don't know where I am
 >
@@ -83,7 +85,7 @@ your bed, you made it, you need to sleep in it." This is where I find myself the
 > Spent my winter in some old apartments <br />
 > Getting stoned and doing nothing <br />
 > Spent my summer in your parents' bedroom <br />
-> Watching Casey make her own choices forever 
+> Watching Casey make her own choices forever
 >
 > \- Eat The Fucking Snow
 
@@ -127,7 +129,7 @@ album. As is tradition with most emo bands of this era, they are never getting b
 records they made. Their other EPs, especially [_Ghoul Intentions_][ghoul-intentions], are worth checking out, though
 none of them are as long or cohesive as _Just Married_.
 
-If you find this album interesting, let me recommend the following albums: 
+If you find this album interesting, let me recommend the following albums:
 
 * [Algernon Cadwallader's _Some Kind of Cadwallader_][cadwallader] - The pinnacle of the Philly emo revival scene, might
   be better than _Just Married_, depending on my mood that day.
