--- a/next/content/blog/icymi-moodymann.mdx
+++ b/next/content/blog/icymi-moodymann.mdx
@@ -4,17 +4,19 @@ date: 2016-12-02T05:00
 description: A catchy mix of Motown and house music.
 cover: /img/icymi/moodymann.jpg
 slug: icymi-moodymann
-tags: 
+tags:
   - icymi
 ---
 
-![Moodymann - Moodymann][1]
+![Moodymann - Moodymann](/img/icymi/moodymann.jpg)
 
-This week, I want to take y'all to Detroit to visit [Moodymann's self titled album][2] from 2014. After 21 years of
+This week, I want to take y'all to Detroit to visit [Moodymann's self titled album](://open.spotify.com/album/61sGO58ljdDgD4Mn6Bcj3P) from 2014. After 21 years of
 creating low key Detroit house music, James Dixon finally starts using his voice (literally, he doesn't sing on any
 other of his albums) to show us his vision of his city. Detroit house music sounds like French House meets Motown. This
 album feels like a woozy tour of the D, where most of the songs are about blowing weed, sipping Remy, and getting with
 women.
+
+<!-- excerpt -->
 
 What really makes this album special is Dixion's voice: All the songs are sung in almost a whisper, but with the music
 around it, it makes complete sense. The album ends with his 11 minute remix of Funkadelic's *Cosmic Slop*. More
