--- a/next/content/blog/icymi-quarantine.mdx
+++ b/next/content/blog/icymi-quarantine.mdx
@@ -4,7 +4,7 @@ date: 2016-12-09T05:00
 description: A beautiful ambient album about the pain of a breakup.
 cover: /img/icymi/quarantine.jpg
 slug: icymi-quarantine
-tags: 
+tags:
   - icymi
 ---
 
@@ -26,6 +26,8 @@ This album is about a break up. They type of break up where you kinda of know
 that it's not working but you don't want to be alone. On Years, you have the
 break up talk where Laurel plays both the parties in the relationship. The
 vocals are ugly and can be a little uncomfortable to listen to.
+
+<!-- excerpt -->
 
 But holy shit is it worth it because you get the album's highlight next, which
 is *Thaw*. The beat is super simple with a lot of static around it for about two
