--- a/next/content/blog/icymi-the-monitor.mdx
+++ b/next/content/blog/icymi-the-monitor.mdx
@@ -8,10 +8,10 @@ tags:
   - icymi
 ---
 
-![The Monitor][3]
+![The Monitor](/img/icymi/the-monitor.jpg)
 
 To honor the inauguration today, I'm going to talk about one of my favorite punk
-albums of all time, [Titus Andronicus's *The Monitor*][1]. This album is sort of
+albums of all time, [Titus Andronicus's *The Monitor*](https://open.spotify.com/album/5U09FQWagzAU5HPmufUAlU). This album is sort of
 a concept album framed around the Civil War juxtaposed around a break up and
 modern general anxiety.
 
@@ -34,6 +34,8 @@ to the lead singer (Patrick Stickles) singing about moving from Jersey to
 Massachusetts after a bad break up. Throughout the album, there are more Civil
 War quotes that fit perfectly with the album. Using the backdrop of the war,
 topics like relationships, addiction, and just general anxiety are explored.
+
+<!-- excerpt -->
 
 > There will be parties, there will be fun
 >
