--- a/next/content/blog/page-speed-shield.mdx
+++ b/next/content/blog/page-speed-shield.mdx
@@ -13,13 +13,15 @@ time, buy domains for them, and then never finish them. For me, I've had a brain
 like 5 years. *Well, maybe* that isn't completely true, but for the purposes of this post, let's just roll with it.
 
 At work, I've been working a lot with Gatsby on a new site. One of our big metrics that we are tracking with this new
-site we are building is [Google Page Speed Insights][page-speed-insights]. For those that don't know, Page Speed
-Insights is a like a special version of [Google Lighthouse][lighthouse] that runs outside of Chrome's Dev Tools. It was
+site we are building is [Google Page Speed Insights](https://developers.google.com/speed/pagespeed/insights/). For those that don't know, Page Speed
+Insights is a like a special version of [Google Lighthouse](https://developers.google.com/web/tools/lighthouse) that runs outside of Chrome's Dev Tools. It was
 during one of these runs that I got an idea:
 
 > What if I made a GitHub badge so that I can check on this passively?
 
 I did some Googling and couldn't find any implementations of it and went to work.
+
+<!-- excerpt -->
 
 # Implementation
 
