--- a/next/content/blog/what-i-learned-at-talent-inc.mdx
+++ b/next/content/blog/what-i-learned-at-talent-inc.mdx
@@ -29,6 +29,8 @@ How can I reward this team effort? I was lucky during my tenure at Talent Inc ma
 the ground up to empower these users. I feel that we delivered on those opportunities and the fact that we exited kind
 of validates that belief.
 
+<!-- excerpt -->
+
 Here are some cool tech patterns I learned around this:
 
 1. **Tagging systems are amazing.** It allows non-technical people to add metadata to records that you can later build
@@ -110,7 +112,7 @@ expect. It won't fix everything, but it will fix a lot of things.
 ## Here's To Tomorrow!
 
 As you can tell, I enjoyed my time at Talent Inc and I hope they enjoyed having me. If you're looking for your next gig,
-I cannot recommend them enough. The future is very bright there and I'm sad that I won't be around to see it. 
+I cannot recommend them enough. The future is very bright there and I'm sad that I won't be around to see it.
 
 At the same time, I'm very excited for what's next. I don't even know what is next. I only have one speed which is "go
 so hard I burnout once a year". I should probably work on that… I'm going to take a few weeks to establish some better
