--- a/next/content/blog/icymi-beauty-and-the-beat.mdx
+++ b/next/content/blog/icymi-beauty-and-the-beat.mdx
@@ -4,7 +4,7 @@ date: 2017-01-27T05:00
 description: Underground rap record that will rock you.
 cover: /img/icymi/beauty-and-the-beat.jpg
 slug: icymi-beauty-and-the-beat
-tags: 
+tags:
   - icymi
 ---
 
@@ -13,14 +13,16 @@ leave your worries at door and enjoy yourself because it is about nothing and
 everything at the same time. These are trying times and escapism sometimes
 helps.
 
-![Edan - Beauty & The Beat][1]
+![Edan - Beauty & The Beat](/img/icymi/beauty-and-the-beat.jpg)
 
 > Does this mic sound blurry?
 
-The album is [Edan's *Beauty & The Beat*][2]. This album is basically
+The album is [Edan's *Beauty & The Beat*](https://open.spotify.com/album/0E5nyAi6rLhzfrsOxYedX3). This album is basically
 underground hip hop that sounds like it's backed by a late 60s guitar heavy rock
 band that's been tripping for 3 years straight. I'm a huge fan of both of those
 genres, so this is like a special treat for me.
+
+<!-- excerpt -->
 
 > Since breast-feeding, my flesh-eating flows had the best leading rappers' chests beating, fast
 >
