Switch to a forked version for remark-excerpt

--- a/next/content/blog/adhd.mdx
+++ b/next/content/blog/adhd.mdx
@@ -20,7 +20,7 @@ and put on Ritalin.
 > differences in brain development and brain activity that affect attention, the ability to sit still, and self-control.
 > ADHD can affect a child at school, at home, and in friendships.
 >
-> \- [KidsHealth](https://kidshealth.org/en/parents/adhd.html#:~:text=ADHD%20stands%20for%20attention%20deficit,at%20home%2C%20and%20in%20friendships.)
+> \- [KidsHealth][kidshealth]
 
 The Ritalin helps with the focus and gives me a lot of energy! Being 6 years old, I don't really understand what this
 ADHD is all about, I just want to play outside and run around with all this energy. I mean sure, I have to go to the
@@ -259,5 +259,6 @@ no one's best interest to define us by what is different. At least that's my int
 All I know is that, today, I'm doing okay. Tomorrow might be a struggle, but I have the tools and understanding to at
 least deal with it. I'm sleeping good, I'm eating good and that's all I can really ask for. Here's to now 🥂❗️
 
+[kidshealth]: https://kidshealth.org/en/parents/adhd.html#:~:text=ADHD%20stands%20for%20attention%20deficit,at%20home%2C%20and%20in%20friendships.
 [adhd-sleep-study]: https://www.wsj.com/articles/could-how-you-sleep-be-linked-to-adhd-1509984462#:~:text=Kooij%20and%20colleagues%20found%20that,during%20sleep%2C%20and%20movement%20slows.
 [adhd-peers]: https://link.springer.com/article/10.1007/s40474-014-0036-0#:~:text=Researchers%20have%20found%20that%20children,hours%20%5B13%2C%2014%5D.
