--- a/next/content/blog/adhd.mdx
+++ b/next/content/blog/adhd.mdx
@@ -13,14 +13,14 @@ tags:
 # 1. The Beginning
 
 I was 6 years old, in first grade. My teacher told my mom that I couldn't sit still and was disruptive. My mom is
-a special educator and takes me to the doctor at which point I am diagnosed with  <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr> 
+a special educator and takes me to the doctor at which point I am diagnosed with  <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr>
 and put on Ritalin.
 
 > ADHD stands for attention deficit hyperactivity disorder. It is a medical condition. A person with ADHD has
 > differences in brain development and brain activity that affect attention, the ability to sit still, and self-control.
 > ADHD can affect a child at school, at home, and in friendships.
 >
-> \- [KidsHealth](https://kidshealth.org/en/parents/adhd.html#:~:text=ADHD%20stands%20for%20attention%20deficit,at%20home%2C%20and%20in%20friendships.)
+> \- [KidsHealth][kidshealth]
 
 The Ritalin helps with the focus and gives me a lot of energy! Being 6 years old, I don't really understand what this
 ADHD is all about, I just want to play outside and run around with all this energy. I mean sure, I have to go to the
@@ -44,6 +44,8 @@ around 3.0. I get a computer when I'm 15 and it's off to the races. I could sit 
 information. Tech blogs, gaming sites, and the old StumbleUpon extension opened my mind to so many possibilities in the
 world. I end up going to a vocational school to learn how to do video editing / graphic design / web design and fall in
 love with making websites.
+
+<!-- excerpt -->
 
 # 2. Early Adulthood
 
@@ -102,7 +104,7 @@ a gown all weekend and shared a room with a friendly guy that had a drinking pro
 drunk. They put me on a nicotine patch because I wasn't allowed to smoke. You're not supposed to sleep with those on
 but I did anyways and had the most vivid and trippiest dreams ever (I fought a giant crab and there were health bars at
 the top of my vision and I would randomly get iOS notifications over the health bars during the fight. This is how
-augmented reality glasses should be designed). 
+augmented reality glasses should be designed).
 
 Most importantly, during this weekend in the hospital, we adjusted my anti-depressants from Celexa to **Wellbutrion**
 and **Remeron**. We will get to the Wellbutrion in later, but the Remeron ended up being the biggest improvement in my
@@ -257,5 +259,6 @@ no one's best interest to define us by what is different. At least that's my int
 All I know is that, today, I'm doing okay. Tomorrow might be a struggle, but I have the tools and understanding to at
 least deal with it. I'm sleeping good, I'm eating good and that's all I can really ask for. Here's to now 🥂❗️
 
+[kidshealth]: https://kidshealth.org/en/parents/adhd.html#:~:text=ADHD%20stands%20for%20attention%20deficit,at%20home%2C%20and%20in%20friendships.
 [adhd-sleep-study]: https://www.wsj.com/articles/could-how-you-sleep-be-linked-to-adhd-1509984462#:~:text=Kooij%20and%20colleagues%20found%20that,during%20sleep%2C%20and%20movement%20slows.
 [adhd-peers]: https://link.springer.com/article/10.1007/s40474-014-0036-0#:~:text=Researchers%20have%20found%20that%20children,hours%20%5B13%2C%2014%5D.
